# ros2_detect_image_yolov5

./: .gitignore  README.md
install/: local_setup.sh  setup.sh
install/bringup/share/bringup/: package.sh
install/bringup/share/bringup/cmake/: bringupConfig.cmake
install/detect/lib/detect/: mask_detect
install/detect/share/detect/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/perception/lib/perception/: capture_camera_pub
install/perception/share/perception/: local_setup.sh  package.sh
install/perception/share/perception/cmake/: perceptionConfig.cmake
install/v4l2_camera/lib/v4l2_camera/: v4l2_camera_node
install/v4l2_camera/share/v4l2_camera/: package.sh
install/v4l2_camera/share/v4l2_camera/cmake/: export_v4l2_cameraExport.cmake
log/: latest_build
src/bringup/: CMakeLists.txt  package.xml
src/bringup/config/: cam.yaml
src/bringup/launch/: detect_only.launch.py  launch.py
src/detect/: package.xml  setup.py
src/detect/detect/: mask_detect.py
src/perception/: CMakeLists.txt  README.md
src/perception/src/: camera_subscriber.cpp  capture_camera_pub.cpp
src/trackor/: package.xml  setup.cfg  setup.py
src/trackor/trackor/: object_detect.py
src/v4l2_camera/: package.xml
